fix(game-frontend): code refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,20 +16,20 @@
 </mat-card>
 <mat-card fxLayoutAlign="center">
   <mat-card-content fxLayout="row" fxLayoutGap="20px">
-    <div *ngIf="response.gameResult != ''">
+    <div *ngIf="response.result != ''">
       <mat-card-title style="color: green"
-        >You {{ response.gameResult }}!
-        <mat-icon style="font-size: 50px" *ngIf="response.gameResult === 'WON'"
+        >You {{ response.result }}!
+        <mat-icon style="font-size: 50px" *ngIf="response.result === 'WON'"
           >celebration</mat-icon
         >
         <mat-icon
           style="font-size: 50px; color: red"
-          *ngIf="response.gameResult === 'LOST'"
+          *ngIf="response.result === 'LOST'"
           >mood_bad</mat-icon
         >
       </mat-card-title>
       <mat-card-title style="color: blue"
-        >Your opponents selection {{ response.gameOption }}!
+        >Your opponents selection {{ response.option }}!
       </mat-card-title>
     </div>
   </mat-card-content>
