--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,15 @@
 </mat-card>
 <mat-card fxLayoutAlign="center">
   <mat-card-content fxLayout="row" fxLayoutGap="20px">
+    {{ initialValues[0] }}
     <button id="stone" mat-fab (click)="selectGameOption('STONE')">
       <mat-icon>fitbit</mat-icon>
     </button>
+    {{ initialValues[1] }}
     <button id="paper" mat-fab (click)="selectGameOption('PAPER')">
       <mat-icon>feed</mat-icon>
     </button>
+    {{ initialValues[2] }}
     <button id="scissor" mat-fab (click)="selectGameOption('SCISSOR')">
       <mat-icon>content_cut</mat-icon>
     </button>
